--- a/css/tetris.css
+++ b/css/tetris.css
@@ -18,6 +18,7 @@ body {
   display: flex;
   justify-content: center;
   background: #000;
+  line-height: 0px;
 }
 
 figure {
@@ -35,6 +36,7 @@ h1 {
 ul {
   display: flex;
   flex-wrap: wrap;
+  list-style: none;
 }
 
 li {
@@ -47,10 +49,6 @@ h1 img {
   padding: 20px 0;
   width: 187.5px;
   height: 60px;
-}
-
-ul {
-  list-style: none;
 }
 
 
@@ -81,3 +79,90 @@ ul {
 .orange {
   background-color: orange;
 }
+
+
+
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0.8;
+  filter: alpha(opacity=50);
+}
+
+#modal {
+  position:absolute;
+  background:url(tint20.png) 0 0 repeat;
+  background:rgba(0,0,0,0.2);
+  border-radius:10px;
+  border: 3px solid #000;
+  outline: 1px solid #fff;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px;
+  font-family: 'Dhurjati', sans-serif;
+  font-size: 36px;
+  text-align: center;
+  vertical-align: center;
+}
+
+#play {
+  font-family: 'Dhurjati', sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+  border-radius:8px;
+  background:#eee;
+  padding:0 80px;
+}
+
+#instructions-title {
+  font-size: 36px;
+  display: block;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.key-instruction-ctn {
+  display: flex;
+  justify-content: space-around;
+}
+
+.key-instruction {
+  display: block;
+  font-size: 30px;
+}
+
+.arrow {
+  font-size: 30px;
+
+  margin-top: 40px;
+
+}
+
+.up {
+  -ms-transform: rotate(90deg); /* IE 9 */
+  -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+  transform: rotate(90deg);}
+
+
+.right {
+  -ms-transform: rotate(180deg); /* IE 9 */
+  -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+  transform: rotate(180deg);}
+
+
+  .down {
+    -ms-transform: rotate(270deg); /* IE 9 */
+    -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+    transform: rotate(270deg);}
+  }
+
+  key-instruction-ctn p.rotatetext {
+    margin-left: 100px;
+  }
