--- a/css/tetris.css
+++ b/css/tetris.css
@@ -19,6 +19,7 @@ body {
   justify-content: center;
   background: #000;
   line-height: 0px;
+  font-family: 'Dhurjati', sans-serif;
 }
 
 figure {
@@ -80,7 +81,9 @@ h1 img {
   background-color: orange;
 }
 
-
+.withborder {
+  border: 1px solid #fff;
+}
 
 
 #overlay {
@@ -106,7 +109,6 @@ h1 img {
   justify-content: center;
   flex-direction: column;
   padding: 20px;
-  font-family: 'Dhurjati', sans-serif;
   font-size: 36px;
   text-align: center;
   vertical-align: center;
@@ -171,8 +173,7 @@ h1 img {
     width: 50px;
     height: 50px;
     background: green;
-    align-self: flex-end;
-    margin: 0 0 20px 20px;
+    margin: 440px 0 20px 20px;
     border-radius: 20%;
     background:url(tint20.png) 0 0 repeat;
     background:rgba(0,0,0,0.2);
@@ -197,4 +198,22 @@ h1 img {
 
   .pause-char {
     margin-left: 4px;
+  }
+
+  .right-ctn {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 120px 0 20px 0;
+  }
+
+  .nextPiece-ctn {
+    padding: 30px;
+    margin: 20px;
+    border: none;
+  }
+
+  .right-ctn h1 {
+    font-size: 30px;
+    margin-bottom: 20px;
   }
