--- a/css/tetris.css
+++ b/css/tetris.css
@@ -99,6 +99,7 @@ h1 img {
   filter: alpha(opacity=50);
 }
 
+
 #modal {
   position:absolute;
   background:url(tint20.png) 0 0 repeat;
@@ -116,6 +117,39 @@ h1 img {
   vertical-align: center;
 }
 
+#gameoveroverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: .8;
+  filter: alpha(opacity=50);
+}
+
+
+#gameovermodal {
+  position:absolute;
+  background:url(tint20.png) 0 0 repeat;
+  background:rgba(0,0,0,0.2);
+  border-radius:10px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px;
+  font-size: 36px;
+  text-align: center;
+  vertical-align: center;
+}
+
+#graphic {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+
 #play {
   font-family: 'Dhurjati', sans-serif;
   font-weight: bold;
@@ -123,6 +157,10 @@ h1 img {
   border-radius:8px;
   background:#eee;
   padding:0 80px;
+}
+
+#play:hover {
+  cursor: pointer;
 }
 
 #instructions-title {
@@ -246,6 +284,11 @@ h1 img {
 
     }
 
+
+    .pause-btn:hover {
+      cursor: pointer;
+    }
+
     .pause-btn:focus {
       outline:0;
     }
@@ -345,4 +388,26 @@ h1 img {
 
   .title3 {
     margin-left: -10px;
+  }
+
+
+
+
+  #playagain {
+    font-family: 'Dhurjati', sans-serif;
+    font-weight: bold;
+    font-size: 40px;
+    color: #fff;
+    background: #000;
+    border: #000;
+    padding:0 80px;
+  }
+
+  #playagain:hover {
+    cursor: pointer;
+    color: #eee;
+  }
+
+  #playagain:focus {
+    outline: none;
   }
