--- a/css/tetris.css
+++ b/css/tetris.css
@@ -20,6 +20,12 @@ body {
   background: #000;
   line-height: 0px;
   font-family: 'Dhurjati', sans-serif;
+
+
+  align-self: center;
+
+
+  flex-direction: column;
 }
 
 figure {
@@ -87,11 +93,7 @@ h1 img {
   border: 1px solid #fff;
 }
 
-
 #overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   background: #000;
@@ -101,16 +103,17 @@ h1 img {
 
 
 #modal {
+  display: flex;
+  align-self: center;
   position:absolute;
+  justify-content: center;
+  flex-direction: column;
   background:url(tint20.png) 0 0 repeat;
   background:rgba(0,0,0,0.2);
   border-radius:10px;
   border: 3px solid #000;
   outline: 1px solid #fff;
   background: #fff;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
   padding: 20px;
   font-size: 36px;
   text-align: center;
@@ -130,7 +133,8 @@ h1 img {
 
 
 #gameovermodal {
-  position:absolute;
+  align-self: center;
+  position: absolute;
   background:url(tint20.png) 0 0 repeat;
   background:rgba(0,0,0,0.2);
   border-radius:10px;
@@ -215,6 +219,9 @@ h1 img {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    align-self: center;
+    justify-content: center;
   }
 
   /* Main Container */
