--- a/css/tetris.css
+++ b/css/tetris.css
@@ -97,7 +97,8 @@ h1 img {
   width: 100%;
   height: 100%;
   background: #000;
-  opacity: 0.8;
+  opacity: .8;
+    background: green;
   filter: alpha(opacity=50);
 }
 
@@ -114,10 +115,13 @@ h1 img {
   border: 3px solid #000;
   outline: 1px solid #fff;
   background: #fff;
+  margin-left: 25px;
   padding: 20px;
-  font-size: 36px;
+  font-size: 18px;
   text-align: center;
   vertical-align: center;
+  height: 200px;
+  width: 150px;
 }
 
 #gameoveroverlay {
@@ -155,12 +159,18 @@ h1 img {
 
 
 #play {
+  display: block;
   font-family: 'Dhurjati', sans-serif;
   font-weight: bold;
-  font-size: 40px;
   border-radius:8px;
   background:#eee;
-  padding:0 80px;
+  margin-top: 5px;
+  padding: 15px 30px 15px 30px;
+}
+
+#play > p {
+  font-size: 22px;
+  margin-top: -22px;
 }
 
 #play:hover {
@@ -168,37 +178,35 @@ h1 img {
 }
 
 #instructions-title {
-  font-size: 36px;
   display: block;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  font-weight: bold;
+  font-size: 24px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .key-instruction-ctn {
   display: flex;
   align-content: flex-start;
+  height: 30px;
+
 }
 
 .key-instruction {
   display: block;
-  font-size: 30px;
+  font-size: 18px;
 }
 
 .arrow {
   display: block;
   text-align: left;
-  font-size: 30px;
-  margin-top: 41px;
-  margin-left: 30px;
-  width: 30px;
-
+  margin-left: 10px;
 }
 
 .up {
   -ms-transform: rotate(90deg); /* IE 9 */
   -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
   transform: rotate(90deg);
-  margin-left: 25px;
 }
 
 
@@ -207,7 +215,6 @@ h1 img {
   -ms-transform: rotate(180deg); /* IE 9 */
   -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
   transform: rotate(180deg);
-  margin-left: 25px;
 }
 
 
@@ -218,13 +225,12 @@ h1 img {
   }
 
   .key-text {
-    margin-left: 20px;
+    margin-left: 40px;
   }
 
   .hold {
-    font-size: 50px;
-    text-align: center;
-    margin-top: 33px;
+    margin-left: 15px;
+    margin-right: 5px;
   }
 
 
